--- a/config/database.yml
+++ b/config/database.yml
@@ -3,22 +3,25 @@
 #
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
-development:
-  adapter: postgresql
-  database: Tasker_development
-  pool: 5
-  username: postgres
-  password: Alice06.12
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: postgresql
-  database: Tasker_test
+  adapter: sqlite3
+  database: db/test.sqlite3
   pool: 5
-  username: postgres
-  password: Alice06.12
+  timeout: 5000
+
+development:
+  adapter: sqlite3
+  database: db/development.sqlite3
+  pool: 5
+  timeout: 5000
+
+# Warning: The database defined as "test" will be erased and
+# re-generated from your development database when you run "rake".
+# Do not set this db to the same as development or production.
 
 production:
   adapter: postgresql
