--- a/config/database.yml
+++ b/config/database.yml
@@ -8,16 +8,18 @@
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: sqlite3
-  database: db/test.sqlite3
+  adapter: postgresql
+  database: Tasker_test
   pool: 5
-  timeout: 5000
+  username: postgres
+  password: Alice06.12
 
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
+  adapter: postgresql
+  database: Tasker_development
   pool: 5
-  timeout: 5000
+  username: postgres
+  password: Alice06.12
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
