--- a/config/database.yml
+++ b/config/database.yml
@@ -7,19 +7,31 @@
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
+# test:
+#   adapter: postgresql
+#   database: Tasker_test
+#   pool: 5
+#   username: postgres
+#   password: Alice06.12
+
+# development:
+#   adapter: postgresql
+#   database: Tasker_development
+#   pool: 5
+#   username: postgres
+#   password: Alice06.12
+
 test:
-  adapter: postgresql
-  database: Tasker_test
+  adapter: sqlite3
+  database: db/test.sqlite3
   pool: 5
-  username: postgres
-  password: Alice06.12
+  timeout: 5000
 
 development:
-  adapter: postgresql
-  database: Tasker_development
+  adapter: sqlite3
+  database: db/development.sqlite3
   pool: 5
-  username: postgres
-  password: Alice06.12
+  timeout: 5000
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
